fix(@dpc-sdp/ripple-ui-core): flags are now aligned to the top

--- a/packages/ripple-ui-core/src/components/acknowledgement/acknowledgement.css
+++ b/packages/ripple-ui-core/src/components/acknowledgement/acknowledgement.css
@@ -1,14 +1,22 @@
 @import '@dpc-sdp/ripple-ui-core/style/breakpoints';
 
 .rpl-acknowledgement {
-  --local-flag-width: 5.5rem;
+  --local-flag-width: 5.7rem;
 
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: flex-start;
 
   @media (--rpl-bp-m) {
     flex-wrap: nowrap;
+  }
+
+  &__flags {
+    display: flex;
+
+    @media (--rpl-bp-m) {
+      margin: var(--rpl-sp-1) 0;
+    }
   }
 
   &__flag {
